@@ -7,6 +7,7 @@ version 2.6.0 (??/??/2009):
 	* It should no longer be possible to end up with duplicates of buddies
 	  in a group on the buddy list.
 	* Removed the unmaintained and unneeded toc protocol plugin.
+	* Fixed NTLM authentication on big-endian systems.
 
 	XMPP:
 	* Add support for in-band bytestreams for file transfers (XEP-0047).
